SERVER-17747 Fix compile on FreeBSD 11

(cherry picked from commit 014d0c666ec15e819ad2bedf32a850ae29ede26e)