src/mongo/db/storage/mmap_v1/btree/btree_ondisk.h
@@ -181,7 +181,7 @@ struct BtreeBucketV0 {
 };
 
 // BtreeBucketV0 is part of the on-disk format, so it should never be changed
-BOOST_STATIC_ASSERT(sizeof(BtreeBucketV0) - sizeof(reinterpret_cast<BtreeBucketV0*>(NULL)->data) ==
+BOOST_STATIC_ASSERT(sizeof(BtreeBucketV0) - sizeof(static_cast<BtreeBucketV0*>(NULL)->data) ==
                     BtreeBucketV0::HeaderSize);
 
 /**
@@ -322,7 +322,7 @@ struct BtreeBucketV1 {
 };
 
 // BtreeBucketV1 is part of the on-disk format, so it should never be changed
-BOOST_STATIC_ASSERT(sizeof(BtreeBucketV1) - sizeof(reinterpret_cast<BtreeBucketV1*>(NULL)->data) ==
+BOOST_STATIC_ASSERT(sizeof(BtreeBucketV1) - sizeof(static_cast<BtreeBucketV1*>(NULL)->data) ==
                     BtreeBucketV1::HeaderSize);
 
 enum Flags { Packed = 1 };
