src/mongo/db/storage/mmap_v1/data_file.cpp
@@ -62,11 +62,9 @@ void data_file_check(void* _mb) {
 
 
 BOOST_STATIC_ASSERT(DataFileHeader::HeaderSize == 8192);
-BOOST_STATIC_ASSERT(sizeof(reinterpret_cast<DataFileHeader*>(NULL)->data) == 4);
-BOOST_STATIC_ASSERT(sizeof(DataFileHeader) -
-                        sizeof(reinterpret_cast<DataFileHeader*>(NULL)->data) ==
+BOOST_STATIC_ASSERT(sizeof(static_cast<DataFileHeader*>(NULL)->data) == 4);
+BOOST_STATIC_ASSERT(sizeof(DataFileHeader) - sizeof(static_cast<DataFileHeader*>(NULL)->data) ==
                     DataFileHeader::HeaderSize);
-
 
 int DataFile::maxSize() {
     if (sizeof(int*) == 4) {
